--- a/app/views/users/_follow_button.html.erb
+++ b/app/views/users/_follow_button.html.erb
@@ -1,18 +1,13 @@
-<%# Renders just the Follow / Following button for a given user %>
-<% if logged_in? && current_user != user %>
-  <% if current_user.following?(user) %>
-    <%= button_to user_follow_path(user),
+<% if current_user.following?(user) %>
+  <%= button_to "Unfollow",
+        user_follow_path(user),
         method: :delete,
-        data: { turbo_stream: true },
-        class: "px-6 py-2 border border-gray-300 rounded-full hover:bg-gray-200" do %>
-      Following
-    <% end %>
-  <% else %>
-    <%= button_to user_follow_path(user),
+        form: { data: { turbo_stream: true } },
+        class: "px-4 py-2 bg-gray-200 text-gray-800 rounded-lg" %>
+<% else %>
+  <%= button_to "Follow",
+        user_follow_path(user),
         method: :post,
-        data: { turbo_stream: true },
-        class: "px-6 py-2 bg-blue-600 text-white rounded-full hover:bg-blue-700" do %>
-      Follow
-    <% end %>
-  <% end %>
+        form: { data: { turbo_stream: true } },
+        class: "px-4 py-2 bg-blue-600 text-white rounded-lg" %>
 <% end %>
