--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <!-- ⭐ REQUIRED FOR TURBO STREAMS TO WORK ⭐ -->
+    <!--  REQUIRED FOR TURBO STREAMS TO WORK  -->
     <%= turbo_include_tags %>
 
     <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload" %>
