--- a/app/views/pins/new.html.erb
+++ b/app/views/pins/new.html.erb
@@ -35,10 +35,13 @@
         <%= f.text_area :description, rows: 3, class: "w-full border-gray-300 rounded p-2" %>
       </div>
 
-      <!-- Image Upload -->
+      <!-- FILE UPLOAD (Image or Video) -->
       <div>
-        <%= f.label :image, class: "block mb-1 font-semibold" %>
-        <%= f.file_field :image, class: "w-full text-gray-700" %>
+        <%= f.label :file, "Upload Image or Video", class: "block mb-1 font-semibold" %>
+
+        <%= f.file_field :file,
+            accept: "image/png,image/jpeg,image/jpg,image/heif,image/heic,video/mp4,video/quicktime",
+            class: "w-full text-gray-700" %>
       </div>
 
       <!-- TAG PEOPLE -->
